--- a/src/index.css
+++ b/src/index.css
@@ -6,5 +6,4 @@ body {
   font-family: "Roboto", sans-serif;
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
 }
