--- a/src/routes/style.css
+++ b/src/routes/style.css
@@ -1,4 +1,5 @@
 .route-container {
     max-width: 100%;
     width: 100%;
+    height: 100%;
 }
